<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/radioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        >
    </RadioButton>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:src="@drawable/icons_msg"
        android:layout_marginStart="5dp"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/questionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="normal"></TextView>

        <TextView
            android:id="@+id/questionMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg1"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="normal"></TextView>
        <TextView
            android:id="@+id/poundsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            android:textColor="@color/colorgreen"
            android:textSize="12sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
</LinearLayout>