<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/modelm"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle"
            android:src="@drawable/backarrow"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="20">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:padding="8dp"
                android:src="@drawable/icons_flag"></ImageView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:padding="10dp"
                android:src="@drawable/icons_share"></ImageView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:padding="8dp"
                android:src="@drawable/icons_star"></ImageView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/userProfileNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/user_name"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/user_job"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="normal">

            </TextView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfileNameLayout"
            android:background="@color/colorWhite"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="-15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_bio"
                    android:textColor="@color/colorgray"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textStyle="normal"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/bio"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="normal">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorgray"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectmsg"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/recycler_item"
                    android:scrollbars="vertical"
                    >

                </androidx.recyclerview.widget.RecyclerView>




            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/bt_messageme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_signup"
        android:elevation="15dp"
        android:text="@string/msgme"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:onClick="messageMeIndex"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>